[package]
name = "termcolor"
version = "1.0.5"  #:version
authors = ["Andrew Gallant <jamslam@gmail.com>"]
description = """
A simple cross platform library for writing colored text to a terminal.
"""
documentation = "https://docs.rs/termcolor"
homepage = "https://github.com/BurntSushi/termcolor"
repository = "https://github.com/BurntSushi/termcolor"
readme = "README.md"
keywords = ["windows", "win", "color", "ansi", "console"]
license = "Unlicense OR MIT"
exclude = ["/.travis.yml", "/appveyor.yml", "/ci/**"]

[lib]
name = "termcolor"
bench = false

[dependencies]
# When built as part of libstd
std = { version = "1.0", package = "rustc-std-workspace-std", optional = true }
core = { version = "1.0", package = "rustc-std-workspace-core", optional = true }

[target.'cfg(windows)'.dependencies]
wincolor = { version = "1", path = "wincolor" }

[features]
rustc-dep-of-std = ["std", "core", "wincolor/rustc-dep-of-std"]
